fix: footer overlap and z-index with drop down

--- a/src/styles/pages_styles/pages_projects_individual.scss
+++ b/src/styles/pages_styles/pages_projects_individual.scss
@@ -38,6 +38,18 @@ h3 {
     font-size: clamp(2dvh, 1dvh + 0.6em, 2.5dvh + 1em);
 }
 
+footer{
+    
+    &::before{
+        content: '';
+        background-color: #181D1F;
+        width: 12%;
+        height: max(240px, 24dvh);
+        display: block;
+        position: absolute;
+    }
+}
+
 //=========================================================
 //  Table of Contents
 //=========================================================
@@ -47,10 +59,11 @@ h3 {
     border-top-right-radius: $borderRadius;
     display: block;
     margin-left: 0%;
-    margin-top: -10em;
+    bottom: 0;
     padding: 2dvh;
     padding-left: 0;
     position: fixed;
+    z-index: 90;
 
     //Used to create a masking layer to hide the toc when moved off main
     &::before{
@@ -65,7 +78,7 @@ h3 {
         position: absolute;
         right: 100%;
         width: 100%;
-        z-index: 200;
+        z-index: 100;
     }
 }
 
@@ -113,27 +126,41 @@ h3 {
 //-------------------------
 //  TOC Events             |
 //-------------------------
-.toc--hide {
-    background-color: transparent;
-    transition-delay: 100ms;
+.toc--hide,
+.toc--show{
     transition-duration: 250ms;
     transition-property: background-color;
-    
-    section {
+
+    section{
         transition-duration: 250ms;
         transition-property: translate;
+    }
+}
+
+.toc--hide {
+    animation-duration: 250ms;
+    animation-fill-mode: forwards;
+    animation-name: tocHideZ__Animation;
+    background-color: transparent;
+    transition-delay: 100ms;
+
+    @keyframes tocHideZ__Animation {
+        from{
+            z-index: 90;
+        }
+        to{
+            z-index: 0;
+        }
+    }
+    
+    section {
         translate: -100%;
     }
 }
 
 .toc--show {
-    transition-duration: 250ms;
-    transition-property: background-color;
-
     section {
         transition-delay: 100ms;
-        transition-duration: 250ms;
-        transition-property: translate;
         translate: 0;
     }
 }
@@ -144,7 +171,7 @@ h3 {
 .section__intro {
     border-color: $borderColor;
     border-style: solid;
-    border-width: 5px;
+    border-width: $borderWidth;
     display: block;
     margin-inline: auto;
     padding: 2em;
